Snapshot antes de la re factorizacion

--- a/apps/users/templates/users/login.html
+++ b/apps/users/templates/users/login.html
@@ -4,7 +4,7 @@
 {% load static %}
 {# 📦 Enables the use of the 'static' template tag to reference static files like CSS/JS/images #}
 
-{% block title %}Login - BAOBYTE{% endblock %}
+{% block title %}Login - {{ COMPANY_NAME }} {% endblock %}
 {# 🧾 Sets the page title dynamically for SEO and browser tab #}
 
 {% block extra_head %}
